feat: 0.5.3 api spec
